# Dungeon-crawler-world

./: .csproj  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.jsonc  .prettierrc  App.xaml  App.xaml.cs  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  Description_common.txt  Dungeon_crawler_world.csproj  GRID_IMPLEMENTATION.md  GRID_QUICKREF.md  GRID_SUMMARY.md  GRID_TESTING.md  Gemfile  ID.jsonc  LICENSE.MD  Makefile  Notifications.txt  Package.json  Package.jsonc  Project_outline.md  Project_outline.txt  Project_outline.txt.md  README.md  REPO_STANDARDS.md  SECURITY.md  Test.yaml  ToDo.md  _config.yml  actions.sarif  build.rs  cargo.toml  changelog.html  (+15 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom.md  feature_request.md  question.md
.github/chatmodes/: lore-data-author.chatmode.md  maintainer.chatmode.md
.github/workflows/: Deploy_Doc.yml  Sheild.yml  Test.yaml  blank.yml  build-and-release.yml  build.yml  ci.yml  codacy.yml  code_quality.yml  codeql.yml  copilot-setup-steps.yml  dependency-review.yml  devskim.yml  dotnet-desktop.yml  github_workflows_copilot-auto-fix.yml  jekyll.yml  lock.yml  rust-clippy.yml  rust-tests.yml  security-alert-to-issue.yml  security-issues.yml  snyk-security.yml
AI/: ParquetDataLoader.cs  info.txt
AI/Data/: data.parquet
AI/Pathfinding/: Pathfinding.cs
AI/Training/: TrainingData.cs
Backup/: Dungeon-crawler-world.sln
Benefits/Climb/: climb.json  description.md
Benefits/Manager/: manager.cpp  manager.rs
Benefits/blend_in/: blend_in.json  description.md
Benefits/remote_detonate/: description.md  remote_detonate.json
Cert/: PFX.md  PSX.ps1
Config/: audio.json  graphics.json  ui.json
Dev-tools/: Copilot-issue-PR.py
Floor/Floor 1/: GenerationRules.md  GenerationRules.rest  GenerationRules.rst  Time.cpp  Time.cs  stats.cs
Floor/Floor_1/: Generation.txt  Time.cs  kruskal.cpp  layout.txt  stats.cpp  stats.cs  time.cpp
Floors/1/: Floor_1.txt
Floors/10/: Notes.txt
Floors/12/: Notes.txt
Floors/18/: Floor_18.txt
Floors/3/: Notes.txt
Floors/6/: Floor_6.txt
Floors/9/: Notes.txt
Gods and divine related entities/Amayon/: affects_celestial.txt  amayon.json
Gods and divine related entities/Apito/: apito.json  voice.txt
Gods and divine related entities/Dewatta/: Dewatta.json
Gods and divine related entities/Emberus/: Emberus.json  voice.txt
Gods and divine related entities/Grawl/: Grawl.json  lore.txt  voice.txt
Gods and divine related entities/Memorial_crystal_common/: memorial.json
Gods and divine related entities/Nekhebit/: nekhebit.json  voice.txt
Gods and divine related entities/Skolopendra/: Skolopendra.json  readme.txt
Gods and divine related entities/Taranis/: taranis.json
Gods/Dewatta/: properties.json
Gods/Grawl/: properties.json
Gods_and_divine_related_entities/Amayon/: affects_celestial.txt  amayon.json
Gods_and_divine_related_entities/Apito/: apito.json  voice.txt
Gods_and_divine_related_entities/Dewatta/: Dewatta.json  voice.txt
Gods_and_divine_related_entities/Emberus/: Description.md  Emberus.json  voice.txt
Gods_and_divine_related_entities/Grawl/: Grawl.json  lore.txt  voice.txt
Gods_and_divine_related_entities/Memorial_crystal_common/: memorial.json
Gods_and_divine_related_entities/Nekhebit/: lore.txt  nekhebit.json  voice.txt
Gods_and_divine_related_entities/Skolopendra/: Skolopendra.json  readme.txt
Gods_and_divine_related_entities/Taranis/: taranis.json
Items/Anarchist_cookbook/: Anarchist_cookbook.json  description.md
Items/Arrow/: Arrow.cs  Arrow.json
Scheme/: Common.json  Save.json  Shader.json  celestial.json  common-definitions.json  entity.json  item.json  note.txt  player.json  player.jsonc  save.json  schema.json  scheme.json  selection.json  settings.json  skills.json  spells.json
Scripts/: bullet.ps1  markdown-lint-ignore-comments.js
Shaders/: Scheme.json  config.json
Sound_Common/: reverb.cs  speak.cs  voice.cs
UI/: AccessibilityFeatures.xaml  GameSavesWindow.cs  GameSavesWindow.xaml  GameSavesWindow.xaml.cs  Main.cs  Main.xaml.cs  MainMenu.cs  MainMenu.xaml  MainMenu.xaml.cs  Settingpage.cs  Settingpage.xaml.cs  Settings.cs  SettingsPage.cs  SettingsPage.schema-validation.cs  SettingsPage.xaml  SettingsPage.xaml.cs
_includes/: nav.html
_layouts/: default.html  page.html
_pages/: changelog.md  code_of_conduct.md  contributing.md  docs.md  index.md  security.md
_site/: feed.xml  robots.txt
acheivments/: Cut!.json  Total_failure.json  hell.json  kill.json
achievements/: crazy_cat.json  kid_killer.json
cpp/: TOC.cpp  TOC.rs  player.cpp  time.cpp
js-test/: collisionSystem.js  engine.js  gameUI.js  player.js  textureGenerator.js  worldGenerator.js
src/: CMakeLists.txt  console.rs  exit.rs  fps.rs  grid.rs  inventory.rs  lib.rs  logger.rs  main.cpp  main.rs  main_menu.rs  new_save.rs  player.rs  save_game.rs  saves.rs  settings.rs  skills.rs  terrain3d.rs  tests.rs  ui_preview.rs  version_checker.rs
src/core/: AssetManager.cpp  Game.cpp  InputManager.cpp  Window.cpp
src/game/: Entity.cpp  main.cpp  mod.rs  terrain_collision.rs
src/glad/: glad.c
src/graphics/: Model.cpp  Texture.cpp
src/logic/: grid_logic.rs  mod.rs  saves_logic.rs  settings_logic.rs  skills_logic.rs
src/physics/: PhysicsSystem.cpp
src/rendering/: camera.rs  depth.rs  mesh_builder.rs  mod.rs  terrain.wgsl  terrain_renderer.rs  vertex.rs
src/ui/: grid_ui.rs  main_menu.rs  mod.rs  saves_ui.rs  settings_ui.rs  skills_ui.rs
tests/: basic_tests.rs  console_state_tests.rs  console_tests.rs  grid_extra_tests.rs  grid_logic_tests.rs  grid_tests.rs  new_save_state_tests.rs  new_save_tests.rs  player_generation.rs  player_tests.rs  property_tests.rs  save_game_tests.rs  save_name_validation_tests.rs  save_system.rs  saves_logic_tests.rs  settings_persistence.rs  settings_tests.rs  skill_discovery.rs  skills_logic_tests.rs  terrain3d_tests.rs  terrain_collision_tests.rs
(+201 files in other folders)
