[package]
edition = "2021"

name = "Dungeon-Crawler-World"
version = "0.0.5"
build = "build.rs"
license = "MIT"
repository = "https://github.com/Julieisbaka/Dungeon-crawler-world"

[features]
default = ["dev-mode"]
dev-mode = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
egui = "0.31.1"
eframe = "0.31.1"
ash = "0.37"
serde_json = "1.0"
image = "0.25"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
