[lib]
name = "dungeon_crawler_world"
path = "src/lib.rs"
[package]
edition = "2021"

name = "Dungeon-Crawler-World"
version = "0.0.6"
build = "build.rs"
license = "MIT"
repository = "https://github.com/Julieisbaka/Dungeon-crawler-world"

[features]
default = ["dev-mode"]
dev-mode = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
egui = "0.32.1"
eframe = "0.32.1"
ash = "0.37" # Replace with Vulkano
serde_json = "1.0"
image = "0.25"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rapier3d = { version = "0.28.0", features = [ "simd-stable" ] }
parry3d = "0.23.0"
egui_commonmark = "0.21"

[build-dependencies]
pkg-config = "0.3"
